--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "express": "^4.18.2",
     "gridfs-stream": "^1.1.1",
     "helmet": "^6.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "4.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^4.17.1",
     "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemon": "^3.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
